--- a/RaellShoes/Views/Shared/Error.cshtml
+++ b/RaellShoes/Views/Shared/Error.cshtml
@@ -11,6 +11,9 @@
     <p>
         <strong>Request ID:</strong> <code>@Model.RequestId</code>
     </p>
+    <p>
+        <strong>Erro:</strong> <code>@Model.Message</code>
+    </p>
 }
 
 <h3>Development Mode</h3>
