--- a/RaellShoes/Views/Clientes/Index.cshtml
+++ b/RaellShoes/Views/Clientes/Index.cshtml
@@ -1,6 +1,6 @@
-﻿@{
-    ViewData["Title"] = "Início";
-}
+﻿@model RaellShoes.Models.ViewModel.LoginViewModel
+
+@{ ViewData["Title"] = "Home"; }
 
 <!DOCTYPE html>
 <html lang="en">
@@ -51,13 +51,13 @@
     <header id="header" class="d-flex align-items-center">
         <div class="container d-flex align-items-center justify-content-between">
 
-            <h1 class="logo"><a href="index.html">RaellShoes<span>.</span></a></h1>
+            <h1 class="logo"><a href="index-logado.html">RaellShoes<span>.</span></a></h1>
             <!-- Uncomment below if you prefer to use an image logo -->
             <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt=""></a>-->
 
             <nav id="navbar" class="navbar">
                 <ul>
-                    <li><a class="nav-link scrollto active" href="home">Início</a></li>
+                    <li><a class="nav-link scrollto active" href="index-logado.html">Início</a></li>
                     <li class="dropdown">
                         <a href="#"><span>Navegue</span> <i class="bi bi-chevron-down"></i></a>
                         <ul>
@@ -79,11 +79,23 @@
                             <li><a href="#">Outlet</a></li>
                         </ul>
                     </li>
-                    <li><a class="nav-link scrollto" href="home/sobrenos">Sobre Nós</a></li>
-                    <li><a class="nav-link scrollto" href="home/contato">Contato</a></li>
-                    <li><a class="nav-link scrollto" href="home/perguntasfrequentes">Perguntas Frequentes</a></li>
-                    <li><a class="nav-link scrollto" href="">Carrinho</a></li>
-                    <li><a class="nav-link scrollto" href="home/login">Login</a></li>
+                    <li><a class="nav-link scrollto" href="sobre-nos.html">Sobre Nós</a></li>
+                    <li><a class="nav-link scrollto" href="contato.html">Contato</a></li>
+                    <li><a class="nav-link scrollto" href="perguntas-frequentes.html">Perguntas Frequentes</a></li>
+                    <li><a class="nav-link scrollto" href="carrinho.html">Carrinho</a></li>
+                    <li class="dropdown">
+                        <a href="#"><span>Meu Perfil</span> <i class="bi bi-chevron-down"></i></a>
+                        <ul>
+                            <li><a href="clientes/meuperfil">Meu Perfil</a></li>
+                            <li><a href="meus-enderecos.html">Meus Endereços</a></li>
+                            <li><a href="meus-cartoes.html">Meus Cartões</a></li>
+                            <li><a href="meus-pedidos.html">Meus Pedidos</a></li>
+                            <li><a href="troca-e-devolucoes.html">Troca e Devoluções</a></li>
+                            <li><a href="ranking-e-vales.html">Ranking e Vales</a></li>
+                            <li><a href="alterar-senha.html">Alterar Senha</a></li>
+                            <li><a href="index.html">Sair</a></li>
+                        </ul>
+                    </li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav><!-- .navbar -->
@@ -91,8 +103,9 @@
         </div>
     </header><!-- End Header -->
     <!-- ======= Hero Section ======= -->
-    <section id="hero" class="d-flex align-items-center img-fluid">
+    <section id="hero" class="d-flex align-items-center">
         <div class="container" data-aos="zoom-out" data-aos-delay="100">
+            <h1>Olá, @Html.DisplayFor(x => x.Nome) </h1>
             <h1>Seja bem vindo à <span>RaellShoes</span></h1>
             <h2>O conforto e comodidade que você procura, encontra aqui!</h2>
             <div class="d-flex">
@@ -103,6 +116,7 @@
     </section><!-- End Hero -->
 
     <main id="main">
+
         <!-- ======= Products Section ======= -->
         <section id="team" class="team section-bg">
             <div class="container" data-aos="fade-up">
@@ -140,7 +154,7 @@
                                 <div class="social">
 
                                     <a href=""><i class="bi bi-cart-check"></i></a>
-                                    <a href="home/detalhesproduto"><i class="bi bi-arrows-angle-expand"></i></a>
+                                    <a href="detalhes-produto.html"><i class="bi bi-arrows-angle-expand"></i></a>
                                 </div>
                             </div>
                             <div class="member-info">
@@ -491,7 +505,8 @@
             </div>
         </div>
     </footer><!-- End Footer -->
-    <!--Whats-->
+
+
     <a href="https://api.whatsapp.com/send?phone=5511989462969&text=Dúvidas" target="_blank"
        style="position:fixed;bottom:20px;right:18px;">
         <svg enable-background="new 0 0 512 512" width="50" height="50" version="1.1" viewBox="0 0 512 512"
