--- a/RaellShoes/Views/Clientes/Index.cshtml
+++ b/RaellShoes/Views/Clientes/Index.cshtml
@@ -87,7 +87,7 @@
                         <a href="#"><span>Meu Perfil</span> <i class="bi bi-chevron-down"></i></a>
                         <ul>
                             <li><a href="clientes/meuperfil">Meu Perfil</a></li>
-                            <li><a href="meus-enderecos.html">Meus Endereços</a></li>
+                            <li><a href="clientes/meusenderecos">Meus Endereços</a></li>
                             <li><a href="meus-cartoes.html">Meus Cartões</a></li>
                             <li><a href="meus-pedidos.html">Meus Pedidos</a></li>
                             <li><a href="troca-e-devolucoes.html">Troca e Devoluções</a></li>
