Novas classes Model dos requisitos de Admin

--- a/RaellShoes/Views/Clientes/Index.cshtml
+++ b/RaellShoes/Views/Clientes/Index.cshtml
@@ -88,7 +88,7 @@
                         <ul>
                             <li><a href="clientes/meuperfil">Meu Perfil</a></li>
                             <li><a href="clientes/meusenderecos">Meus Endereços</a></li>
-                            <li><a href="meus-cartoes.html">Meus Cartões</a></li>
+                            <li><a href="clientes/meuscartoes">Meus Cartões</a></li>
                             <li><a href="meus-pedidos.html">Meus Pedidos</a></li>
                             <li><a href="troca-e-devolucoes.html">Troca e Devoluções</a></li>
                             <li><a href="ranking-e-vales.html">Ranking e Vales</a></li>
