--- a/RaellShoes/Views/Clientes/Index.cshtml
+++ b/RaellShoes/Views/Clientes/Index.cshtml
@@ -57,28 +57,30 @@
 
             <nav id="navbar" class="navbar">
                 <ul>
-                    <li><a class="nav-link scrollto active" href="index-logado.html">Início</a></li>
-                    <li class="dropdown">
-                        <a href="#"><span>Navegue</span> <i class="bi bi-chevron-down"></i></a>
-                        <ul>
-                            <li class="dropdown">
-                                <a href="#"><span>Masculino</span> <i class="bi bi-chevron-right"></i></a>
-                                <ul>
-                                    <li><a href="#">Adulto</a></li>
-                                    <li><a href="#">Infantil</a></li>
-                                </ul>
-                            </li>
-                            <li class="dropdown">
-                                <a href="#"><span>Feminino</span> <i class="bi bi-chevron-right"></i></a>
-                                <ul>
-                                    <li><a href="#">Adulto</a></li>
-                                    <li><a href="#">Infantil</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="#">Lançamentos</a></li>
-                            <li><a href="#">Outlet</a></li>
-                        </ul>
-                    </li>
+                    <li><a class="nav-link scrollto active" href="">Início</a></li>
+                    <li><a class="nav-link scrollto" href="">Pesquisar um Produto</a></li>
+                    <!--
+    <li class="dropdown">
+        <a href="#"><span>Navegue</span> <i class="bi bi-chevron-down"></i></a>
+        <ul>
+            <li class="dropdown">
+                <a href="#"><span>Masculino</span> <i class="bi bi-chevron-right"></i></a>
+                <ul>
+                    <li><a href="#">Adulto</a></li>
+                    <li><a href="#">Infantil</a></li>
+                </ul>
+            </li>
+            <li class="dropdown">
+                <a href="#"><span>Feminino</span> <i class="bi bi-chevron-right"></i></a>
+                <ul>
+                    <li><a href="#">Adulto</a></li>
+                    <li><a href="#">Infantil</a></li>
+                </ul>
+            </li>
+            <li><a href="#">Lançamentos</a></li>
+            <li><a href="#">Outlet</a></li>
+        </ul>
+    </li>-->
                     <li><a class="nav-link scrollto" href="sobre-nos.html">Sobre Nós</a></li>
                     <li><a class="nav-link scrollto" href="contato.html">Contato</a></li>
                     <li><a class="nav-link scrollto" href="perguntas-frequentes.html">Perguntas Frequentes</a></li>
@@ -422,6 +424,20 @@
 
                 </div>
 
+            </div>
+
+            <br />
+            <div class="container mt-5">
+                <!--Box Clientes-->
+                <div class="info-wrap" style=" border-radius:20px">
+                    
+                    <br>
+                    <div class="row">
+                        <input type="button" class="btn btn-dark col-lg-12" style="border-radius:10px" value="Ver todos os produtos"></a>
+                               
+                        <br>
+                    </div>
+                </div>
             </div>
         </section><!-- End Products Section -->
 
