Ajustes Enum e busca de produtos

--- a/RaellShoes/Views/Clientes/Index.cshtml
+++ b/RaellShoes/Views/Clientes/Index.cshtml
@@ -58,7 +58,7 @@
             <nav id="navbar" class="navbar">
                 <ul>
                     <li><a class="nav-link scrollto active" href="">Início</a></li>
-                    <li><a class="nav-link scrollto" href="">Pesquisar um Produto</a></li>
+                    <li><a class="nav-link scrollto" href="clientes/procurarproduto">Pesquisar um Produto</a></li>
                     <!--
     <li class="dropdown">
         <a href="#"><span>Navegue</span> <i class="bi bi-chevron-down"></i></a>
@@ -81,21 +81,21 @@
             <li><a href="#">Outlet</a></li>
         </ul>
     </li>-->
-                    <li><a class="nav-link scrollto" href="sobre-nos.html">Sobre Nós</a></li>
-                    <li><a class="nav-link scrollto" href="contato.html">Contato</a></li>
-                    <li><a class="nav-link scrollto" href="perguntas-frequentes.html">Perguntas Frequentes</a></li>
-                    <li><a class="nav-link scrollto" href="carrinho.html">Carrinho</a></li>
+                    <li><a class="nav-link scrollto" href="">Sobre Nós</a></li>
+                    <li><a class="nav-link scrollto" href="">Contato</a></li>
+                    <li><a class="nav-link scrollto" href="">Perguntas Frequentes</a></li>
+                    <li><a class="nav-link scrollto" href="">Carrinho</a></li>
                     <li class="dropdown">
                         <a href="#"><span>Meu Perfil</span> <i class="bi bi-chevron-down"></i></a>
                         <ul>
                             <li><a href="clientes/meuperfil">Meu Perfil</a></li>
                             <li><a href="clientes/meusenderecos">Meus Endereços</a></li>
                             <li><a href="clientes/meuscartoes">Meus Cartões</a></li>
-                            <li><a href="meus-pedidos.html">Meus Pedidos</a></li>
-                            <li><a href="troca-e-devolucoes.html">Troca e Devoluções</a></li>
-                            <li><a href="ranking-e-vales.html">Ranking e Vales</a></li>
-                            <li><a href="alterar-senha.html">Alterar Senha</a></li>
-                            <li><a href="index.html">Sair</a></li>
+                            <li><a href="">Meus Pedidos</a></li>
+                            <li><a href="">Troca e Devoluções</a></li>
+                            <li><a href="">Ranking e Vales</a></li>
+                            <li><a href="">Alterar Senha</a></li>
+                            <li><a href="home/index">Sair</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -111,7 +111,7 @@
             <h1>Seja bem vindo à <span>RaellShoes</span></h1>
             <h2>O conforto e comodidade que você procura, encontra aqui!</h2>
             <div class="d-flex">
-                <a href="" class="btn-get-started scrollto">Ver Produtos</a>
+                <a href="clientes/procurarproduto" class="btn-get-started scrollto">Ver Produtos</a>
                 <a href="https://www.youtube.com" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Conheça Nossa História</span></a>
             </div>
         </div>
@@ -433,7 +433,7 @@
                     
                     <br>
                     <div class="row">
-                        <input type="button" class="btn btn-dark col-lg-12" style="border-radius:10px" value="Ver todos os produtos"></a>
+                        <a href="clientes/procurarproduto"><input type="button" class="btn btn-dark col-lg-12" style="border-radius:10px" value="Ver todos os produtos"></a>
                                
                         <br>
                     </div>
