--- a/RaellShoes/Views/Clientes/ProcurarProduto.cshtml
+++ b/RaellShoes/Views/Clientes/ProcurarProduto.cshtml
@@ -18,16 +18,17 @@
           rel="stylesheet">
 
     <!-- Vendor CSS Files -->
-    <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-    <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+    <link href="~/assets/vendor/aos/aos.css" rel="stylesheet">
+    <link href="~/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="~/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="~/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+    <link href="~/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+    <link href="~/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
     <!-- Template Main CSS File -->
-    <link href="assets/css/style.css" rel="stylesheet">
-    <link href="assets/antigo/css/style.css" rel="stylesheet">
+    <link href="~/assets/css/style.css" rel="stylesheet">
+    <link href="~/assets/antigo/css/style.css" rel="stylesheet">
+
 
 </head>
 
@@ -45,7 +46,7 @@
                 <ul>
                     <li><a class="nav-link scrollto " href="">Início</a></li>
                     <li><a class="nav-link scrollto" href="clientes/procurarproduto">Pesquisar um Produto</a></li>
-                    
+
                     <li><a class="nav-link scrollto" href="">Sobre Nós</a></li>
                     <li><a class="nav-link scrollto" href="">Contato</a></li>
                     <li><a class="nav-link scrollto" href="">Perguntas Frequentes</a></li>
@@ -74,7 +75,7 @@
 
         <div class="container mt-5">
             <!--Box Clientes-->
-            <div class="info-wrap" style=" border-radius:20px">
+            <div class="info-wrap" style="border-radius:20px">
                 <form asp-action="FiltrarProdutos">
 
                     <h5><strong style="  color: rgb(64, 174, 202);">Procurar Produto </strong></h5><br>
@@ -85,7 +86,6 @@
                             <br>
                             <select asp-for="Marca" asp-items="Html.GetEnumSelectList<RaellShoes.Models.Enums.Marca>()"
                                     class="form-select">
-                                
                             </select>
                         </div>
                         <div class="col-lg-3 col-md-6 form-group mt-3 mt-md-0" id="comb-form">
@@ -100,14 +100,14 @@
                             <span>Cor</span>
                             <br>
                             <select asp-for="CorPrimariaProduto" asp-items="Html.GetEnumSelectList<RaellShoes.Models.Enums.CorPrimariaProduto>()"
-                                    class="form-select">                                
+                                    class="form-select">
                             </select>
                         </div>
                         <div class="col-lg-2 col-md-6 form-group mt-3 mt-md-0" id="comb-form">
                             <span>Gênero</span>
                             <br>
                             <select asp-for="Genero" asp-items="Html.GetEnumSelectList<RaellShoes.Models.Enums.GeneroProduto>()"
-                                    class="form-select">                                
+                                    class="form-select">
                             </select>
                         </div>
 
@@ -115,7 +115,7 @@
                             <span>Tamanho</span>
                             <br>
                             <select asp-for="Tamanho" asp-items="Html.GetEnumSelectList<RaellShoes.Models.Enums.Tamanho>()"
-                                    class="form-select">                               
+                                    class="form-select">
                             </select>
                         </div>
 
@@ -131,13 +131,11 @@
                     <button class="col-lg-12 btn btn-success btn-sm" style="color: white;">Procurar</button><br>
                 </form>
             </div>
-        </div>
-
-
+        </div>    
 
     </section>
 
-   
+    
 
     <!-- ======= Footer ======= -->
     <footer id="footer">
@@ -206,9 +204,7 @@
         </div>
     </footer><!-- End Footer -->
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-            crossorigin="anonymous"></script>
+    
 
 
 
@@ -237,17 +233,17 @@
 
 
     <!-- Vendor JS Files -->
-    <script src="assets/vendor/purecounter/purecounter.js"></script>
-    <script src="assets/vendor/aos/aos.js"></script>
-    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-    <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-    <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-    <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
-    <script src="assets/vendor/php-email-form/validate.js"></script>
+    <script src="~/assets/vendor/purecounter/purecounter.js"></script>
+    <script src="~/assets/vendor/aos/aos.js"></script>
+    <script src="~/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="~/assets/vendor/glightbox/js/glightbox.min.js"></script>
+    <script src="~/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+    <script src="~/assets/vendor/swiper/swiper-bundle.min.js"></script>
+    <script src="~/assets/vendor/waypoints/noframework.waypoints.js"></script>
+    <script src="~/assets/vendor/php-email-form/validate.js"></script>
 
     <!-- Template Main JS File -->
-    <script src="assets/js/main.js"></script>
+    <script src="~/assets/js/main.js"></script>
 
 </body>
 
