Carrinho - Endereços e produtos

--- a/RaellShoes/Views/Clientes/Index.cshtml
+++ b/RaellShoes/Views/Clientes/Index.cshtml
@@ -84,7 +84,7 @@
                     <li><a class="nav-link scrollto" href="">Sobre Nós</a></li>
                     <li><a class="nav-link scrollto" href="">Contato</a></li>
                     <li><a class="nav-link scrollto" href="">Perguntas Frequentes</a></li>
-                    <li><a class="nav-link scrollto" href="">Carrinho</a></li>
+                    <li><a class="nav-link scrollto" href="clientes/carrinho">Carrinho</a></li>
                     <li class="dropdown">
                         <a href="#"><span>Meu Perfil</span> <i class="bi bi-chevron-down"></i></a>
                         <ul>
